--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="./cauhoi.js"></script>
 		<script src="./QuestionPhaseOne.js"></script>
 		<script src="./QuestionPhaseTwo.js"></script>
+		<script src="./Quotes.js"></script>
 		<script src="./index.js" defer></script>
 		<link rel="stylesheet" href="index.css" />
 	</head>
