--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
 			<div class="answers-box"></div>
 			<h3 class="reply-box"></h3>
 			<button class="button hide" role="button">next</button>
+			<div class="copy-right">
+				<div>
+					- DASS-21 (Depression Anxiety and Stress Scales) là thang
+					đánh giá được phát triển bởi các nhà khoa học thuộc Đại học
+					New South Wales (University of New South Wales), Australia.
+				</div>
+				<div>
+					- Nhóm tác giả chỉ sử dụng web với mục đích tham khảo, hoàn
+					toàn cam kết không sử dụng với mục đích thương mại
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
