--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 			<button class="button hide" role="button">next</button>
 			<div class="copy-right">
 				<div>
-					- DASS-21 (Depression Anxiety and Stress Scales) là thang
+					*DASS-21 (Depression Anxiety and Stress Scales) là thang
 					đánh giá được phát triển bởi các nhà khoa học thuộc Đại học
 					New South Wales (University of New South Wales), Australia.
 				</div>
 				<div>
-					- Nhóm tác giả chỉ sử dụng web với mục đích tham khảo, hoàn
+					*Nhóm tác giả chỉ sử dụng web với mục đích tham khảo, hoàn
 					toàn cam kết không sử dụng với mục đích thương mại
 				</div>
 			</div>
