--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="./QuestionPhaseOne.js"></script>
 		<script src="./QuestionPhaseTwo.js"></script>
 		<script src="./Quotes.js"></script>
+		<script src="./ResultTable.js"></script>
 		<script src="./index.js" defer></script>
 		<link rel="stylesheet" href="index.css" />
 	</head>
@@ -17,7 +18,7 @@
 			<h1 class="question"></h1>
 			<div class="answers-box"></div>
 			<h3 class="reply-box"></h3>
-			<button class="button hide" role="button">next</button>
+			<button class="button hide" role="button">Tiếp tục</button>
 			<div class="copy-right">
 				<div>
 					*DASS-21 (Depression Anxiety and Stress Scales) là thang
