--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script src="./QuestionPhaseTwo.js"></script>
 		<script src="./Quotes.js"></script>
 		<script src="./ResultTable.js"></script>
+		<script src="./Endpage.js"></script>
 		<script src="./index.js" defer></script>
 		<link rel="stylesheet" href="index.css" />
 	</head>
@@ -19,7 +20,7 @@
 			<div class="answers-box"></div>
 			<h3 class="reply-box"></h3>
 			<button class="button hide" role="button">Tiếp tục</button>
-			<div class="copy-right">
+			<div class="copy-right hide">
 				<div>
 					*DASS-21 (Depression Anxiety and Stress Scales) là thang
 					đánh giá được phát triển bởi các nhà khoa học thuộc Đại học
